<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <TextView
            android:id="@+id/fragment_add_head"
            android:text="@string/viewholder_note_head"
            android:textSize="14sp"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <EditText
            android:id="@+id/Edittext_fragment_add_note_add_head_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/color_black"
            tools:text="Dela"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_add_head"
            />

    <TextView
            android:id="@+id/fragment_add__description"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:text="@string/viewholder_note_description"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/Edittext_fragment_add_note_add_head_text"
            app:layout_constraintStart_toStartOf="parent"/>


    <EditText
            android:id="@+id/textview_fragment_add_note_add_description_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_add__description"
            app:layout_constraintTop_toBottomOf="@+id/Edittext_fragment_add_note_add_head_text"
            tools:text="Vajnie" />

    <TextView
            android:id="@+id/fragment_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/viewholder_note_date"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add__description"
            app:layout_constraintStart_toStartOf="parent"/>


    <TextView
            android:id="@+id/edittext_fragment_add_note_note_add_date_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/White"
            android:layout_marginTop="17dp"
            android:layout_marginStart="5dp"
            android:text="@string/button_fragment_student_add_date"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textview_fragment_add_note_add_description_text"
            app:layout_constraintStart_toEndOf="@+id/fragment_add_date"/>

    <Button
            android:id="@+id/button_select_date_fragment_note_add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:text="@string/button_fragment_student_add_date"
            app:layout_constraintStart_toEndOf="@+id/edittext_fragment_add_note_note_add_date_text"
            app:layout_constraintTop_toBottomOf="@+id/textview_fragment_add_note_add_description_text"
            />

    <Button
            android:id="@+id/button_add_fragment_note_add"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/button_add_fragment_students_detail"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_date"
            app:layout_constraintStart_toEndOf="@+id/edittext_fragment_add_note_note_add_date_text"
            android:layout_margin="15dp"
            />

    <Button
            android:id="@+id/button_Back_fragment_note_add"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/button_Back_fragment_students_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>