<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <TextView
            android:id="@+id/fragment_students_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/fragment_students_detail_text_view_first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_name"
            android:textColor="@color/color_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_students_name"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_detail_text_view_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_first_name_text"
            android:layout_marginTop="10dp"
            />
    <TextView
            android:id="@+id/fragment_students_detail_text_view_detail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:text="@string/fragment_students_detail_text_view_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_detail"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_detail_text_view_mark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_detail_text"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_mark_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:text="@string/fragment_students_detail_text_view_mark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_mark"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_detail_text_view_date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_mark_text"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:text="@string/fragment_students_detail_text_view_date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_date"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fragment_students_detail_text_view_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_date_text"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/fragment_students_detail_text_view_group_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:text="@string/fragment_students_detail_text_view_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_students_detail_text_view_group"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/button_Back_fragment_students_detail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/button_Back_fragment_students_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            />



</androidx.constraintlayout.widget.ConstraintLayout>