<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_student_top_ConstrainLayout_searchLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toTopOf="parent"

            >

        <EditText
                android:id="@+id/edittext_fragment_student_searchstudent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="Search Student"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_fragment_student_searchstudent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/button_fragment_student_searchstudent"
                android:textSize="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edittext_fragment_student_searchstudent"
                android:layout_marginStart="6dp"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_fragment_student_add_new_student"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="13dp"
                android:text="@string/button_fragment_student_add_new_student"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_fragment_student_searchstudent"
                android:layout_marginLeft="6dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_student_ConstraintLayout_sort"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_student_top_ConstrainLayout_searchLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_fragment_student_sortbyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_fragment_student_sortbyname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_fragment_student_sortbymark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_fragment_student_sortbymark"
                app:layout_constraintStart_toEndOf="@+id/button_fragment_student_sortbyname"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_fragment_student_randomsort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_fragment_student_randomsort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_fragment_student_sortbymark"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_students_floating_button_go_to_notes"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_fragment_students"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="110dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>